--- a/public/templates/settings.html
+++ b/public/templates/settings.html
@@ -7,7 +7,7 @@
 <!-- Page header -->
 <div class="page-header">
     <div class="page-title">
-        <h3>Profile page <small>User profile page layout</small></h3>
+        <h3>Ваш профайл <small></small></h3>
     </div>
 </div>
 <!-- /page header -->
@@ -27,7 +27,7 @@
                 </div>
 
                 <div class="caption text-center">
-                    <h6>Madison Gartner</h6>
+                    <h6 ng-bind-html="userSettings.credential.name"></h6>
                 </div>
             </div>
         </div>
@@ -42,38 +42,36 @@
 
 
     <!-- Profile information -->
-    <form action="#" class="block" role="form">
-        <h6 class="heading-hr"><i class="icon-user"></i> Profile information:</h6>
+    <form class="block" role="form" ng-submit="applyChanges(credential)" name="credentialForm">
+        <h6 class="heading-hr"><i class="icon-user"></i> Персональная информация</h6>
 
         <div class="block-inner">
             <div class="form-group">
                 <div class="row">
                     <div class="col-md-6">
-                        <label>Username</label>
-                        <input type="text" value="Eugene" class="form-control">
+                        <label>Имя пользователя:</label>
+                        <input type="text" class="form-control" ng-model="credential.name" />
                     </div>
                     <div class="col-md-6">
-                        <label>Email</label>
-                        <input type="text" readonly="readonly" value="eugene@kopyov.com" class="form-control">
+                        <label>Email:</label>
+                        <input type="text" readonly="readonly" class="form-control" ng-model="credential.email">
                     </div>
                 </div>
             </div>
 
         </div>
 
-
-        <h6 class="heading-hr"><i class="icon-lock"></i> Security information:</h6>
-
+        <h6 class="heading-hr"><i class="icon-lock"></i> Безопасность</h6>
 
         <div class="form-group">
             <div class="row">
                 <div class="col-md-6">
-                    <label>New password:</label>
-                    <input type="password" placeholder="Enter new password" class="form-control">
+                    <label>Новый пароль:</label>
+                    <input type="password" class="form-control" ng-model="credential.password">
                 </div>
                 <div class="col-md-6">
-                    <label>Repeat password:</label>
-                    <input type="password" placeholder="Repeat new password" class="form-control">
+                    <label>Пароль повторно:</label>
+                    <input type="password" class="form-control" ng-model="credential.passwordRepeat">
                 </div>
             </div>
         </div>
@@ -85,32 +83,18 @@
                 </div>
 
                 <div class="col-md-6">
-                    <label>Notifications: </label>
+                    <label>Уведомления: </label>
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" class="styled" checked="checked">
-                            Password expiration notification
-                        </label>
-                    </div>
-
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" class="styled" checked="checked">
-                            New message notification
-                        </label>
-                    </div>
-
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox" class="styled" checked="checked">
-                            New task notification
+                            Истечение срока действия пароля
                         </label>
                     </div>
 
                     <div class="checkbox">
                         <label>
                             <input type="checkbox" class="styled">
-                            New contact request notification
+                            Файлы для загрузги подготовлены
                         </label>
                     </div>
                 </div>
@@ -118,8 +102,7 @@
         </div>
 
         <div class="text-right">
-            <input type="reset" value="Cancel" class="btn btn-default">
-            <input type="submit" value="Apply changes" class="btn btn-success">
+            <input type="submit" value="Применить изменения" class="btn btn-success" ng-disabled="credentialForm.$invalid || credentialForm.$pristine">
         </div>
 
     </form>
