--- a/public/templates/strategies.html
+++ b/public/templates/strategies.html
@@ -27,7 +27,7 @@
                 <div class="alert alert-block alert-warning fade in">
                     <h6><i class="icon-info2"></i> Пусто</h6>
                     <hr>
-                    <p>Ни одной из стратегий для оригинальных слов не найдено. Добавьте хоте бы одну, иначе вы не сможете загразить для прослушивания ваши слова.</p>
+                    <p>Ни одной из стратегий для оригинальных слов не найдено. Добавьте хотя бы одну, иначе вы не сможете загрузить для прослушивания ваши слова.</p>
                 </div>
                 <br/>
             </div>
