--- a/public/templates/login.html
+++ b/public/templates/login.html
@@ -15,13 +15,13 @@
         <div class="well">
             <div class="form-group has-feedback">
                 <label>E-mail</label>
-                <input type="email" class="form-control" placeholder="E-mail" ng-model="credentials.email" required>
+                <input type="email" class="form-control" placeholder="E-mail" ng-model="credentials.email" required tabindex="1">
                 <i class="icon-users form-control-feedback"></i>
             </div>
 
             <div class="form-group has-feedback">
                 <label>Пароль</label>
-                <input type="password" class="form-control" placeholder="Пароль" ng-model="credentials.password" required>
+                <input type="password" class="form-control" placeholder="Пароль" ng-model="credentials.password" required tabindex="2">
                 <i class="icon-lock form-control-feedback"></i>
             </div>
 
