--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -90,7 +90,7 @@
         <div class="pull-left">&copy; 2014. EngWave app</div>
         <div class="pull-right icons-group">
             <a ng-class="currentController == 'SupportController' ? 'active' : ''" href="#/support">Предложения / Поддержка</a>
-            <a href="#/about">О проекте</a>
+            <a href="http://engwave.com">О проекте</a>
         </div>
     </div>
     <!-- /footer -->
