--- a/module/Application/view/layout/layout.phtml
+++ b/module/Application/view/layout/layout.phtml
@@ -96,6 +96,35 @@
     <!-- /footer -->
 </div>
 
+
+
+
+<!-- Default modal -->
+<div id="tutorialModal" class="modal fade" tabindex="-1" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title">Туториал</h4>
+            </div>
+
+            <div class="modal-body with-padding">
+                <div ng-include src="tutorialTemplate"></div>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">
+                    <i class="icon-checkmark-circle"></i> Спасибо
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- /default modal -->
+
+
+
+
 <script type="text/javascript">
     document.globalSettings = <?= $this->globalSettings ?>;
     document.userSettings = <?= $this->userSettings ?>;
