--- a/public/partials/words/group-add.html
+++ b/public/partials/words/group-add.html
@@ -1,4 +1,4 @@
-<form role="form" ng-submit="addNewGroup()" name="addGroupForm" ng-show="isAddingNewGroup">
+<form role="form" ng-submit="addNewGroup(newGroupTitle)" name="addGroupForm" ng-show="isAddingNewGroup">
     <br/>
     <div class="panel panel-default">
 
@@ -11,7 +11,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <label>Название:</label>
-                        <input type="text" class="form-control input-lg" ng-model="NewGroupForm.title" required>
+                        <input type="text" class="form-control input-lg" ng-model="newGroupTitle" required>
                             <span class="forms-desc" ng-show="addGroupForm.name.$error.minlength">
                             Минимальная длинна три символа.
                         </span>
