--- a/public/partials/strategies/form.html
+++ b/public/partials/strategies/form.html
@@ -24,8 +24,10 @@
                             <h6 class="panel-title"><i class="icon-cogs"></i> Элементы</h6>
 
                             <a  ng-click="add(ITEM_TARGET)" class="pull-right  btn btn-xs btn-success">Перевод</a>
+                            <a  ng-click="add(ITEM_TARGET_SIMPLE)" class="pull-right  btn btn-xs btn-success">Пример перевода</a>
                             <a  ng-click="add(ITEM_SILENCE)" class="pull-right btn btn-xs btn-warning">Тишина</a>
                             <a  ng-click="add(ITEM_SOURCE)" class="pull-right  btn btn-xs btn-info">Оригинал</a>
+                            <a  ng-click="add(ITEM_SOURCE_SIMPLE)" class="pull-right  btn btn-xs btn-info">Пример оригинала</a>
 
                             <span class="pull-right label label-block strategy-label">Добавить: </span>
 
@@ -38,7 +40,7 @@
 
                             <ul id="sortable" class="list-group nav nav-pills nav-stacked">
                                 <li ng-repeat="(i, item) in sortableSourceItems | orderBy:'sort'" class="list-group-item"
-                                    ng-class="(item.type == 1) ? 'list-group-item-info' : (item.type == 2 ? 'list-group-item-warning' : 'list-group-item-success')"
+                                    ng-class="(item.type == 1 || item.type == 4) ? 'list-group-item-info' : (item.type == 2 ? 'list-group-item-warning' : 'list-group-item-success')"
                                     ng-switch on="item.type">
 
                                     <span ng-show="sortableSourceItems.length > 1">
@@ -60,6 +62,12 @@
                                     </item-name>
                                     <item-name ng-switch-when="2">
                                         Тишина
+                                    </item-name>
+                                    <item-name ng-switch-when="4">
+                                        Пример оригинала
+                                    </item-name>
+                                    <item-name ng-switch-when="5">
+                                        Пример перевода
                                     </item-name>
                                     <item-name ng-switch-when="3">
                                         Перевод
@@ -84,6 +92,20 @@
                                                     <label>
                                                         <input type="radio" name="mute-type-{{ $index }}" class="styled"  ng-model="item.settings.type" value="2" ng-selected="item.settings.type == 2">
                                                         Время перевода
+                                                    </label>
+                                                </div>
+
+                                                <div class="radio">
+                                                    <label>
+                                                        <input type="radio" name="mute-type-{{ $index }}" class="styled"  ng-model="item.settings.type" value="4" ng-selected="item.settings.type == 4">
+                                                        Время примера оригинала
+                                                    </label>
+                                                </div>
+
+                                                <div class="radio">
+                                                    <label>
+                                                        <input type="radio" name="mute-type-{{ $index }}" class="styled"  ng-model="item.settings.type" value="5" ng-selected="item.settings.type == 5">
+                                                        Время примера перевода
                                                     </label>
                                                 </div>
 
